# simple_graphics_library

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
resources/: basilica.nff  uffizi.nff
sgl/: CMakeLists.txt
sgl/include/: macros.hpp  sgl.h
sgl/src/: macros.hpp  sgl_context.cpp  sgl_context.hpp  sgl_core.cpp  sgl_core.hpp  sgl_frambuffer.hpp  sgl_framebuffer.cpp  sgl_framebuffer.hpp  sgl_impl.cpp  sgl_matrix.cpp  sgl_matrix.hpp  sgl_renderer.cpp  sgl_renderer.hpp  sgl_scene.cpp  sgl_scene.hpp  sgl_vec.cpp  sgl_vec.hpp  sgl_vec.inl  sgl_vec4.cpp  sgl_vec4.hpp  sgl_vertex.cpp  sgl_vertex.hpp
src/: testapp.cpp
src/util/: hdrloader.cpp  hdrloader.h  nffread.cpp  nffread.h  nffstore.h  nffview.cpp  nffwrite.h  timer.cpp  timer.h
